@@ -44,5 +44,3 @@
 extern void *malloc (size_t);
 
 extern void *realloc (void *, size_t);
-
-extern void free (void *);
